--- a/src/app/features/dashboard/enrollments/enrollments.component.html
+++ b/src/app/features/dashboard/enrollments/enrollments.component.html
@@ -1,1 +1,38 @@
-<p>enrollments works!</p>
+<div appHeader>Inscripciones</div>
+
+<button mat-icon-button (click)="openDialog()">
+    <mat-icon style="color:forestgreen">add_circle</mat-icon>
+</button>
+
+<table mat-table [dataSource]="enrollData" class="mat-elevation-z8">
+  
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="student">
+      <th mat-header-cell *matHeaderCellDef> Alumno</th>
+      <td mat-cell *matCellDef="let element"> {{element.student}} </td>
+    </ng-container>
+  
+    <!-- Course Column -->
+    <ng-container matColumnDef="course">
+      <th mat-header-cell *matHeaderCellDef> Curso </th>
+      <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Acciones</th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button (click)="editEnroll(element)"> <mat-icon>edit</mat-icon> </button>  
+        <button mat-icon-button (click)="deleteEnroll(element.id)"> <mat-icon>delete</mat-icon> </button> 
+    </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
